<resources>
    <string name="app_name">PruebaWposs</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="name_profile">Nombre</string>
    <string name="email_profile">Correo Electrónico</string>
    <string name="count_profile">Nro Cuenta</string>
    <string name="new_client">Nuevo Cliente</string>
    <string name="full_name">Nombre completo</string>
    <string name="document">Documento de identidad</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="save_user">Guardar usuario</string>
    <string name="menu">Menu</string>
    <string name="new_admin">Nuevo</string>
    <string name="users_admin">Usuarios</string>
    <string name="profile">Perfil</string>
    <string name="exit">Salir</string>
    <string name="autor_version">V1.0 - Andres Rangel</string>
    <string name="confirmation">Confirmación</string>
    <string name="confirmation_1">Por un valor de:</string>
    <string name="confirmation_2">Estimado</string>
    <string name="confirmation_3">Desea realizar el pago a WPOSS</string>
    <string name="confirmation_4">Número de tarjeta</string>
    <string name="cancel">Cancelar</string>
    <string name="pay">Pagar</string>
    <string name="deposit">Deposito</string>
    <string name="number_count">Número de cuenta</string>
    <string name="value_deposit">Valor a depositar</string>
    <string name="to_deposit">Depositar</string>
    <string name="drawal">Retiro</string>
    <string name="number_document">Numero de documento</string>
    <string name="value_drawal">Valor a retirar</string>
    <string name="to_drawal">Retirar</string>
    <string name="transaction_failed">Transaccion Rechazada</string>
    <string name="transactions">Transacciones</string>
    <string name="users">Usuarios</string>
    <string name="card">Tarjeta</string>
    <string name="cash">Efectivo</string>
    <string name="history">Historial</string>
    <string name="report">Reporte</string>
    <string name="pay_with_card">Pago con tarjeta</string>
    <string name="number_card">Numero de tarjeta</string>
    <string name="cvv">CVV</string>
    <string name="fecha_exp">Fecha Exp</string>
    <string name="date_format">DD/MM/AAAA</string>
    <string name="value_to_pay">Valor a pagar</string>
    <string name="share">Cuotas</string>
    <string name="welcom_card">Bienvenida su tarjeta</string>
    <string name="reverse">Regresar</string>
    <string name="next">Continuar</string>
    <string name="pay_cash">Pago en efectivo</string>
    <string name="transaction_succesful">Transaccion Exitosa</string>
</resources>