<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.AddUserActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:src="@drawable/icon_arrow"
            android:onClick="back"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:src="@drawable/icon_points"
            android:onClick="menu"/>

        <TextView
            android:id="@+id/titleProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_client"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:hint="@string/full_name"
            android:textColor="@color/textGray"
            android:textColorHint="@color/textHint"
            android:inputType="text"
            android:background="@drawable/input_light"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/txtCard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:hint="@string/document"
            android:textColor="@color/textGray"
            android:textColorHint="@color/textHint"
            android:inputType="number"
            android:background="@drawable/input_light"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:hint="@string/email"
            android:textColor="@color/textGray"
            android:textColorHint="@color/textHint"
            android:inputType="text"
            android:background="@drawable/input_light"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:hint="@string/password"
            android:textColor="@color/textGray"
            android:textColorHint="@color/textHint"
            android:inputType="textPassword"
            android:background="@drawable/input_light"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:hint="@string/confirm_password"
            android:textColor="@color/textGray"
            android:textColorHint="@color/textHint"
            android:inputType="textPassword"
            android:background="@drawable/input_light"
            android:paddingLeft="20dp"/>

        <Button
            android:id="@+id/btnSaveClient"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:text="@string/save_user"
            android:textColor="@color/white"
            android:background="@drawable/button_dark"
            android:onClick="saveUser"/>

    </LinearLayout>

</LinearLayout>