<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConfirmationActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/titleProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/confirmation"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            android:text="@string/confirmation_1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/confirmation_2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="120dp"
            android:textStyle="bold"
            android:text="@string/confirmation_3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="240dp"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="300dp"
            android:paddingLeft="5dp"
            android:text="@string/confirmation_4"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numberCard"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="340dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="380dp"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="190dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/button_dark"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:onClick="confirm"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="230dp"
            android:background="@drawable/button_dark"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </RelativeLayout>

</LinearLayout>