<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PayCashActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:onClick="menu"
            android:src="@drawable/icon_points" />

        <TextView
            android:id="@+id/titleProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/pay_cash"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="60dp"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLength="16"
            android:background="@drawable/input_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/value_to_pay"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="60dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/txtPayment"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:maxLength="5"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="60dp"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:background="@drawable/input_light"/>

        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="previous"
            android:text="@string/reverse"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/button_dark"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="next"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="230dp"
            android:background="@drawable/button_dark"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </RelativeLayout>

</LinearLayout>